Fixed CSS overflow issue.

--- a/src/js/components/Footer/footer_styles.scss
+++ b/src/js/components/Footer/footer_styles.scss
@@ -2,10 +2,10 @@
 
 .footer_wrapper {
     width:100vw;
-    min-height:120px;
+    min-height:160px;
     background-color:#212121;
     position:absolute;
-    bottom:-120px;
+    bottom:-180px;
     left:0;
     @include flex-center;
     justify-content:flex-start;
