--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -22,6 +22,7 @@ body {
     margin:0;
     flex-shrink:0;
     background-color:#000;
+    overflow:hidden;
 
     #root {
         min-height:100vh;
@@ -35,6 +36,7 @@ body {
         align-items:flex-start;
         position:relative;
         animation:fadeIn .75s ease forwards, slideIn .25s ease forwards;
+        overflow:hidden;
 
         h1 {
             margin-top:140px;
@@ -47,8 +49,8 @@ body {
             position:absolute;
             top:0;
             left:0;
-            animation:zoomIn 6s ease forwards;
-            animation-delay:0.25s;
+            //animation:zoomIn 6s ease forwards;
+            //animation-delay:0.25s;
         }
     }
 }
@@ -78,7 +80,11 @@ body {
         transform:none;
     }
 
-    100% {
+    65% {
         transform:scale(1.15);
+    }
+
+    100% {
+        transform:scale(1.13);
     }
 }
